--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -20,4 +20,4 @@ spring:
       path: /h2-console
       settings:
         trace: false
-        web-allow-others: true
+        web-allow-others: false
